frontend/tests/cases/negative/promotionConsumptionPat.gr
foo : Int [2] → Int
foo [x] = x + x;
foo _ = 42
