frontend/tests/cases/negative/promotionConsumptionPat.gr.output
Type checking failed: 
Linearity error: frontend/tests/cases/negative/promotionConsumptionPat.gr:3:5:
Wildcard pattern `_` allowing a value to be discarded